Fix: issue 399 moved truncate class to index.scss

--- a/src/App/components/Section/components/LocationBlock/LocationBlock.module.scss
+++ b/src/App/components/Section/components/LocationBlock/LocationBlock.module.scss
@@ -105,11 +105,6 @@
       -webkit-box-orient: vertical;
       overflow: hidden;
     }
-    .truncate {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
   }
 
   .commentBlock {
